apps/base/media/seerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  selector:
    app: seerr
  ports:
    - name: http
      targetPort: 5055
      port: 5055
