apps/base/media/seerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: seerr
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
